# strawberry-libgpod

./: .gitignore  CMakeLists.txt  Makefile.am  NEWS  README.overview  config.h.in  configure.ac  libgpod-1.0.pc.in
.github/workflows/: ccpp.yml
bindings/mono/: Makefile.include
bindings/mono/libgpod-sharp/: Artwork.cs  AssemblyInfo.cs  Chapter.cs  IpodInfo.cs  PhotoAlbum.cs  Playlist.cs  Track.cs
bindings/python/: gpod.i.in
bindings/python/examples/: play_with_ipod_api.py
docs/reference/tmpl/: itunesdb-lowlevel.sgml
po/: de.po  es.po  fr.po  he.po  it.po  ja.po  libgpod.pot  ro.po  sv.po  zh_CN.po
src/: Makefile.am  db-artwork-parser.c  db-artwork-writer.c  db-itunes-parser.h  db-parse-context.c  itdb.h  itdb_artwork.c  itdb_device.c  itdb_device.h  itdb_hash58.c  itdb_hash72.c  itdb_hashAB.c  itdb_iphone.c  itdb_itunesdb.c  itdb_photoalbum.c  itdb_playlist.c  itdb_plist.c  itdb_private.h  itdb_sqlite.c  itdb_sqlite_queries.h  itdb_sysinfo_extended_parser.c  itdb_thumb.c  itdb_track.c  itdb_tzinfo.c  itdb_zlib.c  ithumb-writer.c  pixmaps.c
tests/: get-timezone.c  itdb_main.c  test-covers.c  test-cp.cc  test-fw-id.c  test-init-ipod.c  test-ls.c  test-photos.c  test-rebuild-db.cc  test-sysinfo-extended-parsing.c  test-write-covers.c
tools/: 90-libgpod.rules.in  Makefile.am  generic-callout.c  ipod-lockdown.c  ipod-scsi.c  ipod-time-sync.c  ipod-usb.c  itdb-syslog.c  itdb-syslog.h  read-sysinfoextended.c  udev-backend.c
